add mindspore code

--- a/scripts/visualization/visualization.ipynb
+++ b/scripts/visualization/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"4\"\n",
     "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "SEED=1024\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -257,21 +258,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 38/38 [00:01<00:00, 26.16it/s]\n",
-      "100%|██████████| 57/57 [00:01<00:00, 53.23it/s]\n"
+      "100%|██████████| 38/38 [00:02<00:00, 15.27it/s]\n",
+      "100%|██████████| 57/57 [00:02<00:00, 26.50it/s]\n"
      ]
     }
    ],
    "source": [
     "base_semantic_feat = dump_semantic_feature(clean_model, tokenizer, train_loader_clean)\n",
     "target_semantic_feat = dump_semantic_feature(clean_model, tokenizer, test_loader_clean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, samples in poison_data.items():\n",
+    "    print(\"test idx:\", idx)\n",
+    "    print(\"samples:\", samples[:30])"
    ]
   },
   {
